gcc/testsuite/rust/rustc/ui/macros/macro-name-typo.rs
fn main() {
    printlx!("oh noes!"); // { dg-error "" "" { target *-*-* } }
}

